# torii-hdl

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.txt  LICENSE  README.md  changelog.html  conf.py  external_libraries.html  genindex.html  getting_started.html  getting_started.md  index.html  install.html  intro.html  intro.md  license.html  migration_guide.html  migration_guide.md  noxfile.py  objects.inv  projects.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: changelog.doctree  codeautolink-cache.json  environment.pickle  external_libraries.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration_guide.doctree  projects.doctree
.doctrees/api/: index.doctree
.doctrees/formal/: index.doctree
.doctrees/language/: index.doctree
.doctrees/sim/: index.doctree
.doctrees/testing/: formal.doctree  index.doctree  simulation.doctree
.doctrees/tutorials/: external_modules.doctree  index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-documentation.yml  3-feature-request.yml  3-feature-suggestion.yml  99-other.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: asic.yaml  ci.yml  codeql.yml  docs.yaml  formal.yml  pr.yaml  tests.yaml
_code/: led_blinker.py  up_counter.py
_static/: documentation_options.js
_static/css/: styles.css
_templates/: versions.html
api/: index.html  index.md
api/backend/: cxxrtl.html  index.html  rtlil.html  verilog.html
api/hdl/: ast.html  cd.html  dsl.html  dsl.md  index.html  index.md  ir.html  mem.html  mem.md  rec.html  rec.md  xfrm.html
api/utility/: index.html  string.html  tracer.html  units.html
contrib/: .flake8  .mypy.ini  .ruff.toml  coveragerc  pyrightconfig.json
contrib/packaging/: APKBUILD.in  PKGBUILD.in  RPM.in
contrib/scripts/: vlog2inst.py
docs/: changelog.md  changes.rst  conf.py  cover.rst  external_libraries.md  getting_started.md  index.md  install.md  install.rst  intro.md  intro.rst  lang.rst  license.md  migration_guide.md  projects.md  requirements.txt  start.rst  supplementary_libraries.md  tutorial.rst
docs/_code/: led_blinker.py  up_counter.py  up_counter.v
docs/_templates/: page.html
docs/api/: diagnostics.md  index.md  tools.md
docs/formal/: index.md
docs/getting_started/: beginners.md  experienced.md  index.md
docs/language/: index.md
docs/migrations/: index.md  v0_to_v1.md
docs/platform/: intel.rst  lattice-ecp5.rst  lattice-ice40.rst  lattice-machxo-2-3l.rst  quicklogic.rst  xilinx.rst
docs/stdlib/: cdc.rst  coding.rst  fifo.rst
docs/testing/: formal.md  index.md  simulation.md
docs/tutorials/: external_modules.md  index.md
examples/asic/: alu.py  counter.py  fsm.py
examples/basic/: alu.py  alu_hier.py  arst.py  cdc.py  ctr.py  ctr_en.py  fsm.py  gpio.py  inst.py  mem.py  pmux.py  por.py  sel.py  uart.py
examples/board/: 01_blinky.py  02_domain.py
examples/formal/: 01_simple_bmc.py  02_simple_kinduction.py  03_fifo.py
formal/: index.html
language/: index.html
latest/: .buildinfo  changelog.html  external_libraries.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration_guide.html  objects.inv  projects.html  py-modindex.html  search.html  searchindex.js  supplementary_libraries.html
latest/.doctrees/: changelog.doctree  codeautolink-cache.json  environment.pickle  external_libraries.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration_guide.doctree  projects.doctree  supplementary_libraries.doctree
latest/_static/: documentation_options.js
latest/api/: diagnostics.html  index.html
latest/language/: index.html
latest/migrations/: v0_to_v1.html
latest/testing/: formal.html  index.html  simulation.html
latest/tutorials/: external_modules.html  index.html
main/: .buildinfo  changelog.html  external_libraries.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration_guide.html  objects.inv  projects.html  py-modindex.html  search.html  searchindex.js  supplementary_libraries.html
main/.doctrees/: changelog.doctree  codeautolink-cache.json  environment.pickle  external_libraries.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration_guide.doctree  projects.doctree  supplementary_libraries.doctree
main/_static/: documentation_options.js
main/api/: diagnostics.html  index.html  tools.html
main/getting_started/: index.html
nmigen/: __init__.py  asserts.py  cli.py  rpc.py  tracer.py  utils.py
nmigen/back/: cxxrtl.py  (+4 more)
sim/: index.html  index.md
testing/: formal.html  index.html  simulation.html
tests/: __init__.py  test_build_dsl.py  test_build_plat.py  test_build_res.py  test_compat.py  test_csr_bus.py  test_csr_event.py  test_csr_wishbone.py  test_event.py  test_examples.py  test_hdl_ast.py  test_hdl_cd.py  test_hdl_dsl.py  test_hdl_ir.py  test_hdl_mem.py  test_hdl_rec.py  test_hdl_xfrm.py  test_lib_cdc.py  test_lib_coding.py  test_lib_fifo.py  test_lib_io.py  test_lib_scheduler.py  test_memory.py  test_periph.py  test_serial.py  test_sim.py  test_toolchain_cxx.py  test_warnings.py  test_wishbone_bus.py  utils.py
torii/: __init__.py  __main__.py  _typing.py  _unused.py  _utils.py  asserts.py  cli.py  errors.py  tracer.py  utils.py  warnings.py
tutorials/: external_modules.html  external_modules.md  index.html  index.md
v0.8.0/: .buildinfo  changelog.html  external_libraries.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration_guide.html  objects.inv  projects.html  py-modindex.html  search.html  searchindex.js
v0.8.1/: .buildinfo  changelog.html  external_libraries.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration_guide.html  objects.inv  projects.html  py-modindex.html  search.html  searchindex.js
(+472 files in other folders)
