# SPDX-License-Identifier: BSD-2-Clause
[project]
name = 'torii'
description = 'A Python-based HDL and framework for silicon-based witchcraft'
authors = [
	{ name = 'Aki Van Ness', email = 'aki@lethalbit.net' },
	{ name = 'Rachel Mant', email = 'git@dragonmux.network' },
	{ name = 'Torii Contributors' },
]
dynamic = ['version']
license = 'BSD-2-Clause'
license-files = ['LICENSE', 'LICENSE.docs']
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
	# NOTE(aki):
	# Having setuptools as a runtime dep feels weird, but we are using the `_distutils`
	# backend for `cxxrtl` support as we need to be able to build C++ object files for
	# simulation.
	#
	# Version 66 of setuptools is the oldest we can go without an API break that we depend
	# on. We eventually should only use setuptools to do the package build, but the list of
	# things needed before we can drop this runtime dep is long.
	'setuptools>=66',
	'pyvcd>=0.4.0,<0.5',
	'Jinja2~=3.1',
	'rich>=13.7.0',
]
keywords = [
	'HDL',
	'FPGA',
	'ASIC',
	'VLSI',
	'Digital Logic Design',
	'Yosys',
	'nextpnr',
]
classifiers = [
	'Development Status :: 4 - Beta',

	'Intended Audience :: Developers',
	'Intended Audience :: Education',
	'Intended Audience :: Information Technology',
	'Intended Audience :: Science/Research',

	'Operating System :: MacOS :: MacOS X',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: POSIX :: Linux',

	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',
	'Programming Language :: Python :: 3.14',

	'Programming Language :: Python :: Implementation :: CPython',
	'Programming Language :: Python :: Implementation :: PyPy',

	'Topic :: Scientific/Engineering',
	'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
	'Topic :: Software Development',
	'Topic :: Software Development :: Embedded Systems',
	'Topic :: Software Development :: Libraries',

	'Typing :: Typed',
]

[project.optional-dependencies]
dev = ['nox']

[project.urls]
source = 'https://github.com/shrine-maiden-heavy-industries/torii-hdl'
issues = 'https://github.com/shrine-maiden-heavy-industries/torii-hdl/issues'
documentation = 'https://torii.shmdn.link/latest'
changelog = 'https://torii.shmdn.link/latest/changelog.html'

[build-system]
requires = ['setuptools>=66', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
exclude = [
	'contrib',
	'contrib.*',
	'docs',
	'docs.*',
	'examples',
	'examples.*',
	'tests',
	'tests.*',
]
namespaces = false

[tool.setuptools.package-data]
torii = ['py.typed']

[tool.setuptools_scm]
version_scheme = 'guess-next-dev'
local_scheme = 'node-and-date'

# Testing Coverage
[tool.coverage.run]
branch = true
omit = [
	'*/noxfile.py',
	'*/__main__.py',
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
	':nocov:',
	# Allow defensive code
	'^\s*raise AssertionError\b',
	'^\s*raise NotImplementedError\b',
	'^\s*raise NotImplemented\b',
	'^\s*raise$',
	# Typing-Related
	'^\s*if (False|TYPE_CHECKING):',
	': \.\.\.(\s*#.*)?$',
	'^ +\.\.\.$',
	'''-> ['"]?NoReturn['"]?:''',
	# Skipped/Failed tests
	'^\s*self\.skipTest\b',
	'^\s*self\.fail\b',
]
partial_branches = [
	':nobr:',
	'''^if __name__ == ['"]__main__['"]:$''',
]

# Typechecking
[tool.pyright]
include = [
	'examples', 'tests', 'torii'
]
exclude = [
	'**/__pycache__', '.nox', 'build', '.github', '.eggs', '*.egg-info'
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
allow_redefinition = true
check_untyped_defs = true

# Code Formatting
[tool.ruff]
cache-dir = 'build/.ruff_cache'
src = [
	'examples', 'tests', 'torii', 'docs'
]
indent-width = 4
line-length = 120
respect-gitignore = true
target-version = 'py311'

# NOTE(aki):
# We can't use the Ruff formatter as is, and they refuse to add support for single quotes
# on docstring, among some other things, so this is just mostly here for reference.
[tool.ruff.format]
docstring-code-format = true
indent-style = 'tab'
line-ending = 'lf'
# Due to Ruff being stupid and not letting us use `'''` we have to use this
quote-style = 'preserve'

[tool.ruff.lint]
select = ['E', 'F', 'W']
# NOTE(aki):
# Commented out ignores are not supported by Ruff but are by Flake8,
# they are present in `contrib/.flake8`.
ignore = [
	# 'E126', # Continuation line over-indented for hanging indent
	'E201', # Whitespace after '('
	'E202', # Whitespace before ')'
	'E221', # Multiple spaces before operator
	'E241', # Multiple spaces after ','
	'E251', # Unexpected spaces around keyword / parameter equals
	'E261', # At least two spaces before inline comment
	'E272', # Multiple spaces before keyword
	'E302', # Expected 2 blank lines, found n
	'E305', # Expected 2 blank lines after end of function or class
	'W191', # Indentation contains tabs
	# 'W504', # line break after binary operator
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'
inline-quotes  = 'single'
multiline-quotes = 'single'

[tool.ruff.lint.isort]
lines-after-imports = 1
